aldoraOrg/force-app/main/default/objects/Country__c/Country__c.object-meta.xml
<CustomObject>
    <description>Stores detailed information about countries, including name, ISO alpha-2 and alpha-3 codes, capital city, region, and regional blocs. This information is fetched and updated daily from the countrylayer API and is used to enrich Lead records with relevant country-specific details.</description>
    <label>Country</label>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>