aldoraOrg/force-app/main/default/objects/Country__c/fields/Alpha2Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha2Code__c</fullName>
    <description>The ISO 3166-1 alpha-2 code for the country, consisting of two characters.</description>
    <label>Alpha 2 Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>