aldoraOrg/force-app/main/default/objects/Country__c/fields/Alpha3Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha3Code__c</fullName>
    <description>The ISO 3166-1 alpha-3 code for the country, consisting of three characters.</description>
    <label>Alpha 3 Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>