aldoraOrg/force-app/main/default/objects/Country__c/fields/CapitalCity__c.field-meta.xml
<CustomField>
    <fullName>CapitalCity__c</fullName>
    <description>The capital city of the country.</description>
    <label>Capital City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>