aldoraOrg/force-app/main/default/objects/Country__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>The region in which the country is located.</description>
    <label>Region</label>
    <length>80</length>
    <type>Text</type>
</CustomField>