aldoraOrg/force-app/main/default/objects/Country__c/fields/RegionalBlocks__c.field-meta.xml
<CustomField>
    <fullName>RegionalBlocks__c</fullName>
    <description>The regional blocs or organizations the country is a part of, represented by their acronyms.</description>
    <label>Regional Blocks</label>
    <length>80</length>
    <type>Text</type>
</CustomField>